Wrong size calculation on new curve objects #40214

Closed
opened 2014-05-15 19:36:03 +02:00 by Karja Krähwald · 5 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken = 2.70 release & 064ef3f

Short description of error
New added curve objects use scale from both T & N menus and multiply it.
Tools (T) - Add Path - Radius
Properties (N) - Display - Grid Floor Scale
(Note: Grid Floor Scale influences the scale meshes will have at creation)

This produces a false curve radius (too little or too big) if you use other values than 1.000 for Grid Floor Scale.
For comparison: normal mesh objects take the scale from (T) as global setting and not add it again to already scaled mesh.

Exact steps for others to reproduce the error

  • In 3D-View go to Properties (N) > Display > Grid Floor Scale: type in a value of 0.100
  • Add any curve object
  • If not already happened, change the radius in its settings menu (T) to 0.100

Problem: you have now a 0.1x0.1 radius for the new curve = 0.01

**System Information** Windows 7 64, HD 5770 **Blender Version** Broken = 2.70 release & 064ef3f **Short description of error** New added curve objects use scale from both T & N menus and multiply it. Tools (T) - Add Path - **Radius** Properties (N) - Display - **Grid Floor Scale** (Note: Grid Floor Scale influences the scale meshes will have at creation) This produces a false curve radius (too little or too big) if you use other values than 1.000 for Grid Floor Scale. For comparison: normal mesh objects take the scale from (T) as global setting and not add it again to already scaled mesh. **Exact steps for others to reproduce the error** - In 3D-View go to Properties (N) > Display > Grid Floor Scale: type in a value of 0.100 - Add any curve object - If not already happened, change the radius in its settings menu (T) to 0.100 Problem: you have now a 0.1x0.1 radius for the new curve = 0.01

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja
Bastien Montagne self-assigned this 2014-05-15 21:55:16 +02:00

This issue was referenced by 48fcadc88d

This issue was referenced by 48fcadc88d1a958e8bfc13871d23addfa1514d61

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 48fcadc88d.

Closed by commit 48fcadc88d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40214
No description provided.