Fix T40214: Wrong size calculation on new curve objects

Do not take into account grid size in objectdata creation itself, this is handled on a higher level.